--- a/src/styles.css
+++ b/src/styles.css
@@ -8,3 +8,24 @@
   --color-secondary-dark: var(--color-neutral-800);
   --color-secondary-dark-hover: var(--color-neutral-900);
 }
+
+*:not(.scrollbar-hidden) {
+  /* * { */
+  scrollbar-width: thin;
+}
+
+*::-webkit-scrollbar {
+  @apply bg-transparent w-2;
+}
+
+*::-webkit-scrollbar-thumb {
+  @apply bg-secondary-dark rounded-full;
+}
+
+.scrollbar-hidden::-webkit-scrollbar-thumb {
+  @apply bg-transparent;
+}
+
+.scrollbar-hidden:hover::-webkit-scrollbar-thumb {
+  @apply bg-secondary-border;
+}
